[package]
name = "open-cisterna"
version = "0.1.0"
authors = ["Sven Trieflinger <sven.trieflinger@gmail.com>"]

[dependencies]
config = "0.8"
env_logger = "0.5.10"
log = "0.4"
rand = "0.4.2"
rocket = "0.3.10"
rocket_codegen = "0.3.10"
rocket_contrib = { version = "0.3.10", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serialport = "2.3.0"
sysfs_gpio = "0.5"
